--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -71,35 +71,28 @@
 - 什么是MeasureSpec，主要作用是什么？包含三种布局模式分别是什么？getWidth()方法和getMeasureWidth()区别呢？
 - View是如何绘制到屏幕上的？View的刷新机制是什么，有哪些重要的方法？
 - Canvas.save()跟Canvas.restore()的调用时机？Canvas的底层机制，绘制框架，硬件加速是什么原理，canvas lock的缓冲区是怎么回事
+- Activity、PhoneWindow、DecorView、ViewRootImpl 之间的关系？四者的创建时机？
+
 
 
 
 ### 03.Android事件体系问题
-#### 3.1 事件拦截
 - 说一下两个手指缩放拖动大图是怎么实现的的思路？
-- 点击事件被拦截，但是想传到下面的View，如何操作？
+- 点击事件被拦截，但是想传到下面的View，如何操作？事件传递流程是什么？主要有哪些方法，请说一下这些方法的作用……
+- 事件分发流程。考察得最多，基本把整个分发流程讲清楚就好了；其次还会考察如何解决具体的冲突场景。
 - RecyclerView 滑动卡顿，请分析原因，并提供解决方案。TraceView 都能看到哪些成分？
-
-
-#### 3.2 事件分发
-- 事件传递流程是什么？主要有哪些方法，请说一下这些方法的作用……
-
-
-#### 3.3 触摸事件
-- 事件分发中的onTouch 和onTouchEvent 有什么区别，又该如何使用？
-- 事件传递流程和OnTouchListener的关系，那个先执行？
+- 事件分发中的onTouch 和onTouchEvent 有什么区别，又该如何使用？事件传递流程和OnTouchListener的关系，那个先执行？
 
 
 
 ### 04.Android消息机制
-#### 4.1 Handler消息机制
 - 请说一下Android消息机制？子线程中是否可以new一个handler对象？会出现什么问题，为什么？如何提高Message的优先级？
+- 阻塞唤醒原理。这里一般是会问为何loop()方法是死循环却不会占用cpu时间片 or 为何next()方法阻塞却不会卡死。更深一点会问到Linux的IO多路复用epoll原理。
 - Looper从消息队列中取出消息后，如何传递给handler？消息队列MessageQuee底层怎么实现的？handler里面的nativePollOnce 为什么不会anr？
 - Handler、Thread和HandlerThread的差别 ？HandlerThread是怎么实现的？
 - Looper.loop()为什么不会阻塞主线程，IdleHandler（闲时机制）是做什么用的？
 - Handler机制，IdleHandler执行时机。Handler#postDelay(runnable, 20s) 一个消息，然后把手机时间调整为1分钟后，刚才的runnable会不会执行。
-- ThreadLocal是如何做到线程间的不共享数据的，ThreadLocalMap里面的key和value是什么。
-- ThreadLocal原理，实现及如何保证Local属性？
+- ThreadLocal是如何做到线程间的不共享数据的，ThreadLocalMap里面的key和value是什么。实现及如何保证Local属性？
 - 说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
 - 什么是消息同步屏障？Android中是如何实现消息同步屏障的？同步屏障的目的主要是为了什么？
 - Choreographer是什么？Choreographer发出异步消息后如何执行任务？
@@ -128,10 +121,11 @@
 ### 08.Android多媒体问题
 - 如何给控件的背景设置圆角。做图片圆角的原理是什么，平常有哪些优化操作
 - 从网络加载一个10M的图片，说下注意事项？如何预防OOM？如何计算一个Bitmap占用内存的大小，怎么保证加载Bitmap不产生内存溢出？
+- drawable。对比使用图片和drawable的好处，以及drawable的原理。不同文件展示会一样嘛？同样图片不同文件展示会一样嘛？
 - svg 为什么体积会比较小？为什么是可伸缩的？是否可以无损缩放？svg 是否可以放一张照片，为什么？
 - 假设现在让你实现图片上覆盖一个旋转角度 45 度 label，如何实现，列举你知道的方案。
 - Luban 压缩具体实现原理，可以自己写吗？Luban 压缩如何保证压缩的同时，图片质量还清晰？
-
+- 为什么限制在应用间共享文件？
 
 
 
@@ -144,10 +138,10 @@
 
 ### 10.Android数据相关问题
 - SharePreference性能优化，可以做进程同步吗？SharedPreferences的应用场景，核心原理是什么？SharedPreferences是线程安全的吗？ 
-- SharedPreferences：两种提交方式，缺点，如何解决
+- SharedPreferences：两种提交方式，缺点，如何解决？主要是commit和apply的区别？
 - Android如何在不压缩的情况下加载高清大图？Android里的内存缓存和磁盘缓存是怎么实现的。
-- android里面的两种序列化方式，如何实现的。Android为什么引入Parcelable？ 有没有尝试简化Parcelable的使用？ 
-- 什么是序列化，序列化的对象设置一个serialVersionUID有什么作用？Parcelable序列化是怎么实现的，Serializable和Parcelable在性能上那个更加高效，具体结合案例说说……
+- android里面的两种序列化方式，如何实现的。Android为什么引入Parcelable？怎么实现的？有没有尝试简化Parcelable的使用？ 
+- 什么是序列化，序列化的对象设置一个serialVersionUID有什么作用？Serializable和Parcelable在性能上那个更加高效，具体结合案例说说……
 
 
 ### 11.WebView相关问题
@@ -185,6 +179,7 @@
 - 加载xml和动态创建view哪个高效？为什么加载xml效率低？
 - TextView 中 setText(Html.fromHtml()) 内部原理知道吗？
 - SurfaceView, TextureView及View的区别。SurfaceView怎么控制它处于的层级。
+- Activity、Dialog、PopupWindow、Toast 与Window的关系？
 
 
 
@@ -201,12 +196,16 @@
 
 ### 16.其他各类问题汇总
 - 有没有接触过Socket编程，简单说下代码实现。
+- Android9 10 11 都更新了什么新特性，新版本中无法获取IMEI怎么处理。
+- 如果设计一个App的启动框架，需要考虑什么问题，怎么处理同步异步的加载任务调度。
 
 
 
 ### 17.Android编译问题
 - gradle生命周期，怎么自定义插件？统计编译耗时插件，运行在哪个阶段？
 - 描述从编译到apk的过程，以及gradle有哪些task参与其中？
+- implementation 和 api的区别是什么？
+
 
 
 ### 18.项目架构相关问题
