--- a/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
@@ -62,6 +62,7 @@
 - 使用过什么图片加载库，Glide 的源码设计哪里很微妙？说一下三级缓存的原理？描述一下内存缓存的容器？
 - 官方为什么会把 HttpClient 和 HttpUrlConnection 替换为 OkHttp 默认实现？它有什么好处？
 - 说一下你常用图片加载框架的缓存实现是怎么进行的？LRUCache原理……
+- Glide中怎么实现图片的加载进度条，Glide的缓存是怎么设计的？为什么要用弱引用。
 
 
 
