--- a/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
+++ b/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
@@ -4,16 +4,21 @@
 - 02.经典框架
 - 03.性能优化
 - 04.常见算法
-
+- 05.Java技能
 
 
 
 ### 01.基础原理
-- 怎么加载一张超大图？加载大图如何避免OOM，平常是怎么压缩图片的？如何加载超高清大图，局部加载图片了解嘛？
+- Activity启动流程。其中考察最多的类似问题是：从桌面点击一个图标之后，到界面显示，这个过程发生了什么？
+- 启动模式。也就是常见的四种启动模式，面试官更喜欢问何时使用他们，也就是使用场景。
+- 怎么加载一张超大图？如何计算内存大小？加载大图如何避免OOM，平常是怎么压缩图片的？如何加载超高清大图，局部加载图片了解嘛？
 - Android有哪些跨进程通信，AIDL的代码实现？aidl平常使用有哪些注意点？
 - View的绘制流程，包括渲染和View本身的绘制3部曲。View是如何加载到Window上到？
-- Handler的工作流程，源码要记牢，细节要理解透，比如怎么唤醒主线程的，while为啥不会阻塞主线程。
+- Handler的工作流程，比如怎么唤醒主线程的，while为啥不会阻塞主线程。同步屏障。涉及到绘制优化、屏幕刷新机制等。
+- 阻塞唤醒原理。这里一般是会问为何loop()方法是死循环却不会占用cpu时间片 or 为何next()方法阻塞却不会卡死。更深一点会问到Linux的IO多路复用epoll原理。
 - 说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
+- Activity、PhoneWindow、DecorView、ViewRootImpl 之间的关系？四者的创建时机？
+- serializable和parcelable的原理，以及各自的优缺点、应用场景。
 
 
 
@@ -29,6 +34,17 @@
 - 内存泄漏怎么排查，OOM怎么排查？平常有做过哪些内存优化相关的工作？
 
 
+
+### 05.Java技能
+- Synchronized。必问，java的锁机制。特别是jdk6之后的锁优化以及运用场景。为什么是重量级的、JVM层如何实现
+- Lock。必问，AQS的原理最好懂。一般会拿来和synchronize比较。具体原理是怎么实现的？
+- volatile。必问，会拿来和锁比较，他的两个重要作用。更深点会问到cpu缓存一致性协议、以及指令重排的类型与原理。
+- 死锁。一般询问如何解决或者产生的条件。
+- Object的wait和notify。阻塞唤醒，一般会用一个代码或者具体的场景来询问如何保证多线程同步。
+- 类加载机制。同时还会问双亲委托机制。
+- 线程与进程的内存关系。如一个线程占多少内存、一个进程可以开多少线程、一个进程占用多少内存等。
+- 内存分布。JMM、运行时数据区、native内存分布。很看对JVM的理解程度。
+- HashMap 1.7，1.8的差异，1.8中什么情况下转换为红黑树，构造函数中参数代表的意思
 
 
 
