--- a/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
@@ -110,11 +110,6 @@
     - 如果没有在期间完成渲染秒就会发生掉帧。掉帧是用户体验中一个非常核心的问题。丢弃了当前帧，并且之后不能够延续之前的帧率，这种不连续的间隔会容易会引起用户的注意，也就是我们常说的卡顿、不流畅。
 - 那么是不是1s只要绘制了60帧是不是就是流畅的呢？
     - 也不一定，如果发生抖动的情况，那么肯定会有其中几帧是有问题的。其中肯定会有最大绘制帧，和最小绘制帧的情况，所以平均值，最大值最小值都是我们需要知道的。
-- 了解一些常识，人眼识别多少帧
-    - 12fps大概类似手动快速翻动书籍的帧率，这明显是可以感知到不够顺滑的。24fps使得人眼感知的是连续线性的运动，这其实是归功于运动模糊的效果。24fps是电影胶圈通常使用的帧率，因为这个帧率已经足够支撑大部分电影画面需要表达的内容，同时能够最大的减少费用支出。
-    - 但是低于30fps是无法顺畅表现绚丽的画面内容的，此时就需要用到60fps来达到想要的效果，当然超过60fps是没有必要的。
-- 如何查看FPS流畅度
-    - 待完善，todo
 
 
 #### 2.4 一帧显示的步骤
@@ -246,26 +241,7 @@
 
 
 #### 4.4 FPS帧率检测
-- Choreographer是什么
-    - Android系统从4.1（API 16）开始加入 Choreographer 这个类来协调动画(animations)、输入(input)、绘制(drawing)三个UI相关的操作。
-    - Choreographer 中文翻译过来是”编舞者“，字面上的意思就是优雅地指挥以上三个UI操作一起跳一支舞。Choreographer 从显示子系统接收定时脉冲（例如垂直同步——VSYNC 信号），然后安排工作以渲染下一个显示帧。
-- Choreographer跟线程关系
-    - 每个线程都有自己的 Choreographer，其他线程也可以发布回调以在 Choreographer 上运行，但它们是运行在 Choreographer 所属的 Looper 上。
-- FrameCallback是什么
-    - FrameCallback 是和Choreographer 交互，在下一个 frame 被渲染时触发的接口类。开发者可以使用 Choreographer#postFrameCallback 设置自己的callback 与 Choreographer 交互，你设置的 callBack 会在下一个 frame 被渲染时触发。
-- View绘制跟Choreographer关系
-    - ViewRootImpl 在开始绘制时会调用 Choreographer 的 postCallback 传递一个任务，Choreographer 同步完 VSYNC 信号后再执行这个任务完成绘制。
-- 如何统计fps采集
-    - 一般常规的Fps采集可以通过Choreographer既UI线程绘制的编舞者，Choreographer是一个ThreadLocal的单例，接收vsync信号进行界面的渲染，我们只要对其添加一个CallBack，就可以巧妙的计算出这一帧的绘制时长。
-    - Matrix对于核心Choreographer是对CallbackQueue的hook，通过hook addCallbackLocked分别在不同类型的回调队列的头部添加自定义的FrameCallback。
-- 如何实现线上用户的帧率监控
-    - 可以通过 Choreographer.FrameCallback 回调来实现帧率监控，具体的代码可以看 [PerformanceManager](待补充)。大概思路如下所示：
-    - 首先开启一个handler消息，执行一个异步定时任务，每1000ms执行一次，用于统计1秒内的帧率。
-    - 使用 Choreographer.getInstance().postFrameCallback(this) 注册 VSYNC 信号回调监听，当 VSYNC 信号返回时，会执行 doFrame 回调函数。
-    - 在 doFrame 方法中，我们统计每秒内的执行次数，以及记录当前帧的时间，并注册一下次监听(调用postFrameCallback方法)。
-- 如何统计帧率原理
-    - 从源码分析Choreographer是如何实现VSYNC信号的请求及帧的刷新处理？（Android Q）
-    - https://blog.csdn.net/u011578734/article/details/109625782
+- 具体可以看：[14.FPS检测设计实践]()
 
 
 
