--- a/Read/ReadMeWiki/02.性能工具/02.Android性能分析.md
+++ b/Read/ReadMeWiki/02.性能工具/02.Android性能分析.md
@@ -1,10 +1,15 @@
 #### 目录介绍
-- 01.性能问题分类
+- 01.性能如何去量化
+- 02.性能问题的分类
 
 
 
+### 01.性能如何去量化
+- 如何衡量一个APP性能好坏？直观感受就是：启动快、流畅、不闪退、耗电少等感官指标，反应到技术层面包装下就是：FPS（帧率）、界面渲染速度、Crash率、网络、CPU使用率、电量损耗速度等，一般挑其中几个关键指标作为APP质量的标尺。
+- 多种APM检测工具，功能复杂多样，但其实很多指标并不是特别重要，实现越复杂，线上风险越大，因此，并不建议直接使用。而且，分析多家APP的实现原理，其核心思路基本相同，且门槛也并不是特别高，建议自研一套，在灵活性、安全性上更有保障，更容易做到轻量级。
 
-### 01.性能问题分类
+
+### 02.性能问题的分类
 - 渲染问题
     - 分析纬度：过度绘制(布局层次)、布局冗杂、页面流畅度、地图加载时长
     - 分析工具：DoKit，Layout Inspector，FPS
@@ -14,7 +19,9 @@
 - 功耗问题
     - 分析纬度：耗电、流量消耗
     - 分析工具：Profiler，DoKit
-
+- 网络请求
+    - 分析纬度：异常率、流量消耗、数据容错
+    - 分析工具：Profiler
 
 
 
@@ -47,8 +54,9 @@
 
 
 - Activity 启动耗时分析
-https://blog.csdn.net/DiDi_Tech/article/details/100912725
-
+    - https://blog.csdn.net/DiDi_Tech/article/details/100912725
+- Android性能监测工具
+    - https://mp.weixin.qq.com/s/tcE_XnAN_rsqZszLUHEKhg
 
 
 
