--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -27,7 +27,7 @@
 - onNewIntent()调用时机？onNewIntent()具体有什么作用？Activity遵循什么设计模式？知道ActivityThread这个类是干什么用的吗？
 - 直接在Activity中创建一个thread跟在service中创建一个thread之间恩区别
 - 由A启动BActivity，A为栈内复用模式，B为标准模式，然后再次启动A或者杀死B，说说A，B的生命周期变化，为什么？
-
+- 谈谈Activity的四种启动模式，SingleTop和SingleTask启动模式的应用场景
 
 
 #### 1.2 Service
@@ -191,7 +191,7 @@
 - Binder内核所在的进程是如何找到到Server跟Client进行通信的
 - ServiceManager是一个单独的进程，那么Server与ServiceManager通讯是靠什么呢？
 - Android Binder机制是做什么的，为什么选用Binder，原理了解吗？
-
+- Binder机制详解，用Binder中mmap思想解决你的APP卡顿问题？
 
 
 ### 16.其他各类问题汇总
