--- a/Read/ReadMeWiki/09.问题思考/07.设计模式问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/07.设计模式问题汇总.md
@@ -24,6 +24,9 @@
 - 双重校验：第一校验处于性能考虑，若对象存在直接返回，不需要加锁。第二次校验是为了防止重复构建对象。对象引用必须声明为 volatile，通过保证可见性和防止重排序，保证单例线程安全。因为INSTANCE = new instance()不是原子操作，由三个步骤实现1.分配内存2.初始化对象3.将INSTANCE指向新内存，当重排序为1,3,2时，可能让另一个线程在第一个判空处返回未经实例化的单例。
 - 手写单例(DCL)模式代码？为什么要这样设计？如何防止反射、序列化攻击单例？
 - 手写常见的单例模式代码？synchronized修饰方法和修饰类有什么区别？写完后，请简述它们使用场景和利弊……
+- 单利模式下引发的血案，DCL双端锁下的CAS与ABA问题，尝试解释一下具体的原理？
+
+
 
 
 ### 07.工厂模式问题
