--- a/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
+++ b/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
@@ -45,6 +45,10 @@
 - 线程与进程的内存关系。如一个线程占多少内存、一个进程可以开多少线程、一个进程占用多少内存等。
 - 内存分布。JMM、运行时数据区、native内存分布。很看对JVM的理解程度。
 - HashMap 1.7，1.8的差异，1.8中什么情况下转换为红黑树，构造函数中参数代表的意思
+- GC过程（判断对象是否存活，GC算法）
+
+
+
 
 
 
