--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -4,17 +4,19 @@
     - 1.2 遇到问题
     - 1.3 基础概念介绍
     - 1.4 设计目标
-    - 1.5 产生收益分析
 - 02.App崩溃流程
     - 2.1 为何崩溃推出App
     - 2.2 Java崩溃流程
     - 2.3 Native崩溃流程
     - 2.4 崩溃日志处理
+    - 2.5 最后推出App
 - 03.崩溃处理入口
     - 3.1 Java处理异常入口
     - 3.2 异常处理常用api
     - 3.3 注意事项说明
+    - 3.4 JVM处理异常入口
     - 3.5 理解异常栈轨迹链
+    - 3.6 JVM如何实现异常
 - 04.崩溃监听思路
     - 4.1 实现崩溃监听
     - 4.2 处理捕获异常
@@ -55,11 +57,11 @@
 - 确认严重程度
     - 如果一时半会解决不了，那么能否先止损，采用降级策略。延期修复，如果是非要解决，那么解决完后即通过灰度测试发版，及时跟进问题。
 - 崩溃基本信息
-    - Java 崩溃（比如 NullPPointerException 是空指针，OutOfMemoryError 是资源不足）
+    - Java 崩溃（比如 `NullPPointerException` 是空指针，`OutOfMemoryError` 是资源不足）
     - Native 崩溃（比较常见的是有 SIGSEGV 和 SIGABRT）
     - ANR（先看看主线程的堆栈，是否是因为锁等待导致。接着看看 ANR 日志中 iowait、CPU、GC、system server 等信息，进一步确定是 I/O 问题，或是 CPU 竞争问题，还是由于大量 GC 导致卡死）
-- Logcat。
-    - 从 Logcat 中我们可以看到当时系统的一些行为跟手机的状态，当从一条崩溃日志中无法看出问题的原因，或者得不到有用信息时，不要放弃，建议查看相同崩溃点下的更多崩溃日志。
+- Logcat日志
+    - 从 `Logcat` 中我们可以看到当时系统的一些行为跟手机的状态，当从一条崩溃日志中无法看出问题的原因，或者得不到有用信息时，不要放弃，建议查看相同崩溃点下的更多崩溃日志。
 - 查找共性（机型、系统、ROM、厂商、ABI）
     - 机型、系统、ROM、厂商、ABI，这些采集到的系统信息都可以作为维度聚合，共性问题例如是不是因为安装了 Xposed，是不是只出现在 x86 的手机，是不是只有三星这款机型，是不是只在 Android 8.0 的系统上。
 - 复现问题
@@ -68,12 +70,13 @@
 
 #### 1.4 设计目标
 - 能够准确将崩溃日志写到本地文件
+    - 能够捕获到崩溃日志，然后把它通过io流写入到file文件中。写入的崩溃信息，带有完整的异常堆栈链信息，还有一些基础的手机和App属性。
 - 能够有效计算相同崩溃的次数
+    - 比如针对同一段代码的类型转化异常`java.lang.NumberFormatException: For input string: "12.3"`，如果出现多次，需要统计到具体的次数。
 - 能够可视化展示崩溃日志信息
+    - 这一块，主要是能够读到崩溃日志路径，拿到所有的文件。然后通过可视化界面展示出来，方便查看！
 - 能够将崩溃信息文件转发分享
-
-
-#### 1.5 产生收益分析
+    - 能够将崩溃file文件分享到微信，QQ或者钉钉这类社交App，方便测试童鞋转发给开发。
 
 
 
@@ -223,6 +226,15 @@
     ```
 
 
+#### 2.5 最后推出App
+- 推出App的方式常见的有哪些？思考一下，系统是采用那种方式推出App，为什么？
+    - 第一种：在根页面，调用`finish`直接推出App的首页，`Activity`会调用`onDestroy`。这种情况进程其实是未杀死的情况，
+    - 第二种：在根页面，调用`moveTaskToBack`推出App，这种类似home键作用，`Activity`是调用`onStop`回到后台。
+    - 第三种：finish所有的`activity`推出App，这种情况下，进程可能存活。
+    - 第四种：直接调用`killProcess`杀死进程，然后在调用`System.exit`推出程序。这种方式是彻底杀死进程，比较粗暴【系统就是这种】。
+- App常见友好的推出方式
+    - 杀死进程：先回退到桌面，然后`finish`掉所有`activity`页面，然后在杀死进程和推出程序。可以避免闪一下……
+
 
 
 ### 03.崩溃处理入口
@@ -248,8 +260,6 @@
         return uncaughtExceptionHandler != null ? uncaughtExceptionHandler : group;
     }
     ```
-- 那么思考一下，`jvm`是如何构造`Throwable`异常的呢？
-
 
 
 #### 3.2 异常处理常用api
@@ -259,7 +269,16 @@
     private volatile UncaughtExceptionHandler uncaughtExceptionHandler;
     private static volatile UncaughtExceptionHandler defaultUncaughtExceptionHandler;
     ```
-- `defaultUncaughtExceptionHandler`:设置一个静态的默认的`UncaughtExceptionHandler`。来自所有线程中的`Exception`在抛出并且未捕获的情况下，都会从此路过。进程`fork`的时候设置的就是这个静态的`defaultUncaughtExceptionHandler`，管辖范围为整个进程。
+- `defaultUncaughtExceptionHandler`:设置一个静态的默认的`UncaughtExceptionHandler`。
+    - 来自所有线程中的`Exception`在抛出并且未捕获的情况下，都会从此路过。进程`fork`的时候设置的就是这个静态的`defaultUncaughtExceptionHandler`，管辖范围为整个进程。
+    ``` java
+    Thread.setDefaultUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
+        @Override
+        public void uncaughtException(Thread t, Throwable e) {
+            System.out.println("所有线程异常都会被捕获，捕获所有线程："+t.toString() + " throwable : " + e.getMessage());
+        }
+    });
+    ```
 - `uncaughtExceptionHandler`:为单个线程设置一个属于线程自己的`uncaughtExceptionHandler`，辖范围比较小。
     ``` java
     //为单个线程设置一个属于线程自己的uncaughtExceptionHandler，捕获单个线程异常。设置后，线程可以完全控制它对未捕获到的异常作出响应的处理。
@@ -267,13 +286,6 @@
         @Override
         public void uncaughtException(Thread t, Throwable e) {
             System.out.println("捕获单个线程："+t.toString() + " throwable : " + e.getMessage());
-        }
-    });
-    //所有线程中的Exception在抛出并且未捕获的情况下，都会从此路过
-    Thread.setDefaultUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
-        @Override
-        public void uncaughtException(Thread t, Throwable e) {
-            System.out.println("捕获所有线程："+t.toString() + " throwable : " + e.getMessage());
         }
     });
     ```
@@ -314,6 +326,24 @@
     - 所以如果用了第三方的统计模块，可能会出现失灵的情况。对于这种情况，在设置默认 `handler` 之前，可以先通过 `getDefaultUncaughtExceptionHandler()` 方法获取并保留旧的`handler`，然后在默认`handler`的`uncaughtException`方法中调用其他`handler`的`uncaughtException`方法，保证都会收到异常信息。
 
 
+
+#### 3.4 JVM处理异常入口
+- 思考一下：JVM拿到异常之后是如何将捕获的异常回调到`java`层的`uncaughtException`方法。
+- 在 Hotspot 虚拟机源码的 thread.cpp 中的 [JavaThread::exit](http://hg.openjdk.java.net/jdk8u/jdk8u/hotspot/file/c55d012dd067/src/share/vm/runtime/thread.cpp#l1799) 方法发现了这样的一段代码，并且还给出了注释：
+    ``` c++
+    if (HAS_PENDING_EXCEPTION) {
+      ResourceMark rm(this);
+      jio_fprintf(defaultStream::error_stream(),
+            "\nException: %s thrown from the UncaughtExceptionHandler"
+            " in thread \"%s\"\n",
+            pending_exception()->klass()->external_name(),
+            get_thread_name());
+      CLEAR_PENDING_EXCEPTION;
+    }
+    ```
+- 在线程调用 exit 退出时，如果有未捕获的异常，则会调用 Thread.dispatchUncaughtException 方法。这个则是java层处理异常的入口！
+
+
 #### 3.5 理解异常栈轨迹链
 - 来看一个简单的崩溃日志，如下所示：
     - 那么这个崩溃日志，是怎么形成的崩溃异常链的？
@@ -343,6 +373,18 @@
 
 
 
+#### 3.6 JVM如何实现异常
+- 那么思考一下，`jvm`是如何构造`Throwable`异常的呢？
+- 异常实例的构造十分昂贵
+    - 由于在构造异常实例时，JVM 需要生成该异常的栈轨迹，该操作逐一访问当前线程的 Java 栈桢，并且记录下各种调试信息，包括栈桢所指向方法的名字、方法所在的类名以及方法在源代码中的位置等信息。
+- JVM 捕获异常需要异常表
+    - 每个方法都有一个异常表，异常表中的每一个条目都代表一个异常处理器，并且由 from、to、target 指针及其异常类型所构成。form-to 其实就是 try 块，而 target 就是 catch 的起始位置。
+    - 当程序触发异常时，JVM 会检测触发异常的字节码的索引值落到哪个异常表的 from-to 范围内，然后再判断异常类型是否匹配，匹配就开始执行 target 处字节码处理该异常。
+- 最后是finally代码块的编译
+    - finally 代码块一定会运行的（除非虚拟机退出了）。那么它是如何实现的呢？其实是一个比较笨的办法，当前 JVM 的做法是，复制 finally 代码块的内容，分别放在所有可能的执行路径的出口中。
+
+
+
 ### 04.崩溃监听思路
 #### 4.1 实现崩溃监听
 - `ThreadHandler`这个类就是实现了`UncaughtExceptionHandler`这个接口。`handler`将会报告线程终止和不明原因异常这个情况。
@@ -356,6 +398,7 @@
     }
     ```
 
+
 #### 4.2 处理捕获异常
 - 当出现异常的时候，最终会将异常分发到uncaughtException这个回调方法中。处理捕获异常相关操作，就是在这个方法中处理
     ``` java
@@ -364,6 +407,14 @@
         //处理业务，可以拿到线程和异常throwable对象，解析异常操作
     }
     ```
+
+
+#### 4.3 实现相同异常次数统计
+- 大概的思路如下所示
+    - 每一次发生崩溃时，拿到异常Throwable，然后获取它的堆栈信息，转化为字符串后再md5一下得到一个key。每一次存储的时候，获取之前的【如果之前没有则是0】次数加一
+- 注意问题点：关键是怎么判断两个崩溃是同一个？
+    - 举一个例子：Integer.parseInt("12.3") 和 Integer.parseInt("12.4") 它们都是 NumberFormatException 异常，但却是不同的。获取堆栈再md5一下即可保证key唯一
+
 
 
 #### 4.4 崩溃日志收集
@@ -460,12 +511,8 @@
 - 其他一些博客
     - https://segmentfault.com/a/1190000020986852?utm_source=sf-related
     - https://juejin.cn/post/6854573218171191309
-
-
-#### 参考项目
-- 爱奇艺
-    - https://github.com/iqiyi/xCrash
-    - https://github.com/JZ-Darkal/AndroidHttpCapture
+- 这异常竟然捕获不到？
+    - https://mp.weixin.qq.com/s/UcvTk8DAPnEh-DoouoyZMg
 
 
 
