--- a/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
@@ -9,7 +9,7 @@
     - 2.2 空指针崩溃问题
     - 2.3 索引越界异常
     - 2.4 核心catch上报
-    - 2.5 不要随意catch
+    - 2.5 异常捕获准则
     - 2.6 Crash长效治理
 - 03.系统级别Crash
     - 3.1 排查解决思路
@@ -111,15 +111,35 @@
     - 所以如果在多线程下对其操作就容易引发`IndexOutOfBoundsException`。常用的如JDK里的ArrayList和Android里的SparseArray、ArrayMap，同时也要注意有一些类的内部实现也是用的线程不安全的容器，如Bundle里用的就是ArrayMap。
 
 
+
 #### 2.4 核心catch上报
 - 核心`try-catch`建议增加APM异常上报
     - 对于一些特殊情况，比如说，开发过程当中或代码中出现了一些catch代码块，捕获住了异常，让程序不崩溃，这其实是不合理的，程序虽然没有崩溃，当时程序的功能已经变得不可用。
     - 所以，这些被`catch`的异常我们也需要上报上来，这样我们才能知道用户到底出现了什么问题而导致的异常。
 - 如何捕获下层基础库异常，上报到APM？
     - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然没办法直接做到……可以间接通过接口回调来上报异常。
+- 举一个实际的例子捕获catch中异常
+    - 你抛出的异常越具体、越明确越好。使用者可以根据具体的异常进行不同的补救措施。因此，你需要确保提供尽可能多的信息，这会使得你的 API 更易于理解。
+    ``` java
+    try {
+        xxxxs
+    } catch (IOException e) {
+        // 上报后可在异常平台上查询到相关信息，这个地方注意使用具体的异常，比如NullPointerException
+        ExceptionHelper.report("video player set data error : " , e);
+    }
+    ```
 
 
-#### 2.5 不要随意catch
+
+#### 2.5 异常捕获准则
+- catch 时请分清稳定代码和非稳定代码，稳定代码指的是无论如何不会出错的代码。
+    - 对于非稳定代码的 catch 尽可能进行区分异常类型，再做对应的异常处理。说明：对大段代码进行  try-catch，使程序无法根据不同的异常做出正确的应激反应，也不利于定位问题，这是一种不负责任的表现。
+    - 正例：用户注册的场景中，如果用户输入非法字符，或用户名称已存在，或用户输入密码过于简单，在程序上作出分门别类的判断，并提示给用户。
+- 不要在 finally 块中使用 return
+    - finally 块中的 return 返回后方法结束执行，不会再返回 try 块中的 return 语句的结果，即返回值被 finally 的返回值覆盖；
+- catch 只处理应用能处理的异常，不要捕获 Throwable
+    - Throwable 是所有 Exceptions 和 Errors 的父类。如果使用了 Throwable ，它将不仅捕获所有异常，还会捕获所有错误。这些错误是由 JVM 抛出的，用来表明不打算由应用处理的严重错误。
+
 
 
 #### 2.6 Crash长效治理
