feat：悬浮窗完善

--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -7,13 +7,16 @@
     - 1.5 收益分析
 - 02.Window概念
     - 2.1 Window的概念
-    - 2.2 
+    - 2.2 LayoutParams
+    - 2.3 Window窗口坐标
+    - 2.4 WPS流程梳理
 - 03.悬浮窗技术要点
-    - 3.1 业务思考点
+    - 3.1 业务思考点分析
     - 3.2 关键技术要点
     - 3.3 应用内悬浮窗
     - 3.4 应用外悬浮窗
     - 3.5 悬浮窗添加流程
+    - 3.6 拖拽回弹吸附
 - 04.开发重要步骤
     - 4.1 悬浮窗实现流程
     - 4.2 请求悬浮窗权限
@@ -35,18 +38,19 @@
     - 6.3 灰度设计
     - 6.4 降级设计
     - 6.5 异常设计
-
+- 07.遇到的问题和坑
+    - 7.1 处理输入法层级关系
+    - 7.2 边界逻辑关闭悬浮窗
+    - 7.3 点击多次打开页面
 
 
 
 ### 01.整体概述
 #### 1.1 项目背景
-- 市面上常见的悬浮窗，如微信、手机QQ的视频通话功能，有如下特点：
-    - 整屏页面能切换到一个小的悬浮窗
-    - 悬浮窗能运行在其他app上方
-    - 悬浮窗能跳回整屏页面，并且悬浮窗消失
-
-
+- 业务场景分析
+    - 以视频通话为例，在视频通话时，我们打开其他应用或点击Home键退出时或点击缩放图标，悬浮窗会显示在其他应用之上，给人的假象是通话页面变小了，点击悬浮窗回到通过页面，悬浮窗消失。退出通话页面悬浮窗消失。
+- 市面上常见的悬浮窗，如微信视频通话功能，有如下特点：
+    - 整屏页面能切换到一个小的悬浮窗；悬浮窗能运行在其他app上方；悬浮窗能跳回整屏页面，并且悬浮窗消失
 
 
 #### 1.2 遇到问题
@@ -64,22 +68,23 @@
     - 系统窗口，如：Toast，输入法，状态栏，导航栏。
 - Window 是分层的，每个 Window 都有对应的 z-ordered，层级大的会覆盖在层级小的 Window 上面。
     - 在三种 Window 中，应用 Window 层级范围是 1~99，子 Window 层级范围是1000~1999，系统 Window 层级范围是 2000~2999。
-- 这些层级范围对应着 WindowManager.LayoutParams 的 type 参数，如果想要 Window 位于所有 Window 的最顶层，那么采用较大的层级即可，很显然系统 Window 的层级是最大的。
-    - 当我们采用系统层级时，一般选用TYPE_SYSTEM_ERROR或者TYPE_SYSTEM_OVERLAY，还需要声明权限。
-    ```
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    ```
+- 这些层级范围对应着 WindowManager.LayoutParams 的 type 参数
+    - 如果想要 Window 位于所有 Window 的最顶层，那么采用较大的层级即可，很显然系统 Window 的层级是最大的。
 - Android显示系统分为3层
     - UI框架层：负责管理窗口中View组件的布局与绘制以及响应用户输入事件
     - WindowManagerService层：负责管理窗口Surface的布局与次序
     - SurfaceFlinger层：将WindowManagerService管理的窗口按照一定的次序显示在屏幕上
 
 
-
 #### 1.4 设计目标
+- 目前开发悬浮窗的方案有以下几种
+    - 第一种：写在base里面或者监听所有activity生命周期，这样每次启动一个新的Activity都要往页面上addView一次。
+    - 第二种：采用在Window上添加View的形式，相当于是全局性的悬浮窗。
 
 
 #### 1.5 收益分析
+- 悬浮窗收益
+    - 提高产品的用户体验，app推到后台，或者推出页面做其他操作(比如查看信息)，这个时候浮窗功能主要是增加通话的友好
 
 
 ### 02.Window概念
@@ -93,13 +98,26 @@
     - 参数view就代表着一个窗口。在Activity和Dialog的显示过程中都会调用到wm.addView(decor, l)；所以Activity和Dialog的DecorView就代表着各自的窗口。
 
 
+#### 2.4 LayoutParams
+- WindowManager.LayoutParams这个类用于提供悬浮窗所需的参数，其中有几个经常会用到的变量：
+    - type值用于确定悬浮窗的类型，一般设为2002，表示在所有应用程序之上，但在状态栏之下。
+    - flags值用于确定悬浮窗的行为，比如说不可聚焦，非模态对话框等等，属性非常多，大家可以查看文档。
+    - gravity值用于确定悬浮窗的对齐方式，一般设为左上角对齐，这样当拖动悬浮窗的时候方便计算坐标。
+    - x值用于确定悬浮窗的位置，如果要横向移动悬浮窗，就需要改变这个值。
+    - y值用于确定悬浮窗的位置，如果要纵向移动悬浮窗，就需要改变这个值。
+    - width值用于指定悬浮窗的宽度。
+    - height值用于指定悬浮窗的高度。
+
+#### 2.3 Window窗口坐标
+
+
+
+
 ### 03.悬浮窗技术要点
-#### 3.1 业务思考点
+#### 3.1 业务思考点分析
 - 针对窗口缩小或者悬浮窗需要考虑几个重要的点：
     - 悬浮窗体的比例以及层级，层级要在statusBar之下且在activity之上，这样才能保证其不会被其他业务界面覆盖；
     - 悬浮框显示后，内部的内容如何无缝衔接继续显示；
-- 悬浮窗回到桌面
-
 
 
 #### 3.2 关键技术要点
@@ -131,15 +149,23 @@
     - -> ViewRootImpl.setView
 
 
+#### 3.6 拖拽回弹吸附
+- 先看微信效果
+    - 当你拖动微信悬浮窗的时候，手指松开，这个时候悬浮窗回到边缘，会有一个很友好的动画过渡效果。而并非是改变位置那么生硬。
+- 为何做该功能
+    - 拖拽回到边缘，如果是直接调用updateLocation，那太生硬了。
+- 如何做友好动画
+    - 这里可以添加属性动画，给动画设置时间，然后在动画执行获取坐标值。然后再更改位置，这样就比较连贯，效果更好一些。
+
+
 
 ### 04.开发重要步骤
 #### 4.1 悬浮窗实现流程
 - 应用内悬浮窗实现流程
-    - 获取WindowManager
-    - 创建悬浮View
-    - 设置悬浮View的拖拽事件
-    - 添加View到WindowManager中
-
+    - 第一个是获取WindowManager，然后设置相关params参数。注意配置参数的时候需要注意type
+    - 第二个是添加xml或者自定义view到windowManager上
+    - 第三个是处理拖拽更改view位置的监听逻辑，分别在down，move，up三个事件处理业务
+    - 第四个是吸附左边或者右边，大概的思路是判断手指抬起时候的点是在屏幕左边还是右边
 
 
 #### 4.2 请求悬浮窗权限
@@ -153,6 +179,8 @@
     ``` java
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     ```
+- 针对不同厂商手机的权限说明
+    - 待完善
 
 
 #### 4.3 初始化悬浮窗
@@ -182,6 +210,7 @@
     // 将悬浮窗控件添加到WindowManager
     windowManager.addView(view, layoutParams);
     ```
+- 需要注意的是，在隐藏悬浮窗的时候，最好是移除一下，下次需要显示的时候再添加。
 
 
 #### 4.6 悬浮窗拖拽实现
@@ -196,11 +225,12 @@
 
 #### 4.8 悬浮窗权限适配
 - 权限配置和请求，这一块倒是没什么坑
-    - 在当Android7.0以上的时候，需要在AndroidManefest.xml文件中声明SYSTEM_ALERT_WINDOW权限
+    - 在当Android7.0以上的时候，需要在AndroidManifest.xml文件中声明SYSTEM_ALERT_WINDOW权限
     ``` java
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
     ```
+
 
 #### 4.9 LayoutParam坑
 - LayoutParam的坑！！！！
@@ -222,6 +252,25 @@
     ```
 
 
+### 07.遇到的问题和坑
+#### 7.1 处理输入法层级关系
+- 先看一下问题
+    - 微信里的悬浮窗是在输入法之下的，所以交互的同学也要求悬浮窗也要在输入法之下。查看了一下WindowManager源码，悬浮窗的优先级TYPE_APPLICATION_OVERLAY，上面大字写着明明是在输入法之下的，但是实际表现是在输入法之上。
+
+
+#### 7.2 边界逻辑关闭悬浮窗
+- 先看一下问题
+    - 谷歌坑人的地方，都没地方设置这个悬浮窗是否只用到app内，所以默认在桌面上也会显示自己的悬浮窗。
+    - 比如在微信里显示其他app的悬浮窗，这种糟糕的体验可想而知，用户不给你卸载就真是奇迹了。
+- 尝试解决这个问题
+    - 为了解决这个问题，最初的实现方式是对所有经过的activity进行记录，显示就加1，页面被挂起就减1，如果减到当前计数为0时说明所有页面已经关闭了，就可以隐藏悬浮窗了。
+    - 实际上这么做还是有问题的，在部分手机上如果是在首页按返回键的话仍然不能隐藏，这个又是系统级的兼容性问题。
+    - 为了解决这问题，后面又做了一个处理，通过注册registerActivityLifecycleCallbacks监听app的前后台回调，检测到如果当前首页被销毁时，应该将悬浮窗进行隐藏。
+
+
+#### 7.3 点击多次打开页面
+- 问题说明一下
+    - 如果你的悬浮窗点击事件是打开页面的话，这里需要注意了，别忘了将这个打开的页面的启动模式设置为singleTop或者是singleTask，从而复用同一个，远离一直按返回的地狱操作。
 
 
 
