feat：悬浮窗笔记完善

--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -6,16 +6,16 @@
     - 1.4 设计目标
     - 1.5 收益分析
 - 02.Window概念
-    - 2.1 Window的概念
-    - 2.2 LayoutParams
-    - 2.3 Window窗口坐标
-    - 2.4 WPS流程梳理
+    - 2.1 Window添加View
+    - 2.2 Window的概念
+    - 2.3 LayoutParams
+    - 2.4 WMS流程梳理
 - 03.悬浮窗技术要点
     - 3.1 业务思考点分析
     - 3.2 关键技术要点
     - 3.3 应用内悬浮窗
     - 3.4 应用外悬浮窗
-    - 3.5 悬浮窗添加流程
+    - 3.5 添加浮窗源码流程
     - 3.6 拖拽回弹吸附
 - 04.开发重要步骤
     - 4.1 悬浮窗实现流程
@@ -63,11 +63,9 @@
 
 #### 1.3 基础概念
 - Window 有三种类型，分别是应用 Window、子 Window 和系统 Window。
-    - 应用Window，如：Activity和Dialog。
-    - 子Window，如：PopupWindow。
-    - 系统窗口，如：Toast，输入法，状态栏，导航栏。
-- Window 是分层的，每个 Window 都有对应的 z-ordered，层级大的会覆盖在层级小的 Window 上面。
-    - 在三种 Window 中，应用 Window 层级范围是 1~99，子 Window 层级范围是1000~1999，系统 Window 层级范围是 2000~2999。
+    - 应用Window：z-index在1~99之间，它往往对应着一个Activity。
+    - 子Window：z-index在1000~1999之间，它往往不能独立存在，需要依附在父Window上，例如Dialog等。
+    - 系统Window：z-index在2000~2999之间，它往往需要声明权限才能创建，例如Toast、状态栏、系统音量条、错误提示框都是系统Window。
 - 这些层级范围对应着 WindowManager.LayoutParams 的 type 参数
     - 如果想要 Window 位于所有 Window 的最顶层，那么采用较大的层级即可，很显然系统 Window 的层级是最大的。
 - Android显示系统分为3层
@@ -88,7 +86,24 @@
 
 
 ### 02.Window概念
-#### 2.1 Window的概念
+#### 2.1 Window添加View
+- 先看一个简单的案例。在主屏幕上添加一个TextView并展示，并且这个TextView独占一个窗口。
+    ``` java
+    TextView mview = new TextView(context);
+    WindowManager mWindowManager = (WindowManager) getSystemService(Context.WINDOW_SERVICE);
+    WindowManager.LayoutParams wmParams = new WindowManager.LayoutParams();
+    wmParams.type = WindowManager.LayoutParams.TYPE_TOAST;
+    wmParams.width = 800;
+    wmParams.height = 800;
+    mWindowManager.addView(mview, wmParams);
+    ```
+- 对Window添加View的流程步骤分析
+    - WindowManager.addView添加窗口之前，TextView的onDraw不会被调用，也就说View必须被添加到窗口中，才会被绘制。只有申请了依附窗口，View才会有可以绘制的目标内存。
+    - 当APP通过WindowManagerService的代理向其添加窗口的时候，WindowManagerService除了自己进行登记整理，还需要向SurfaceFlinger服务申请一块Surface画布，其实主要是画布背后所对应的一块内存，只有这一块内存申请成功之后，APP端才有绘图的目标，并且这块内存是APP端同SurfaceFlinger服务端共享的，这就省去了绘图资源的拷贝。
+    - APP端是可以通过unLockCanvasAndPost直接同SurfaceFlinger通信进行重绘的，就是说图形的绘制同WMS没有关系，WMS只是负责窗口的管理，并不负责窗口的绘制。
+
+
+#### 2.2 Window的概念
 - Window是个抽象类，PhoneWindow是Window唯一的实现类。PhoneWindow像是一个工具箱，封装了三种工具：
     - DecorView、WindowManager.LayoutParams、WindowManager。
     - 其中DecorView和WindowManager.LayoutParams负责窗口的静态属性，比如窗口的标题、背景、输入法模式、屏幕方向等等。WindowManager负责窗口的动态操作，比如窗口的增、删、改。
@@ -98,7 +113,7 @@
     - 参数view就代表着一个窗口。在Activity和Dialog的显示过程中都会调用到wm.addView(decor, l)；所以Activity和Dialog的DecorView就代表着各自的窗口。
 
 
-#### 2.4 LayoutParams
+#### 2.3 LayoutParams
 - WindowManager.LayoutParams这个类用于提供悬浮窗所需的参数，其中有几个经常会用到的变量：
     - type值用于确定悬浮窗的类型，一般设为2002，表示在所有应用程序之上，但在状态栏之下。
     - flags值用于确定悬浮窗的行为，比如说不可聚焦，非模态对话框等等，属性非常多，大家可以查看文档。
@@ -108,7 +123,6 @@
     - width值用于指定悬浮窗的宽度。
     - height值用于指定悬浮窗的高度。
 
-#### 2.3 Window窗口坐标
 
 
 
@@ -138,15 +152,30 @@
 #### 3.4 应用外悬浮窗
 
 
-#### 3.5 悬浮窗添加流程
+#### 3.5 添加浮窗源码流程
 - 悬浮窗添加流程：
     - -> WindowManager.addView          这个是调用ViewManager接口的addView方法添加视图
     - -> WindowManagerImpl.addView      接着会调用具体实现类
-    - -> WindowManagerGlobal.addView    在这个方法中会找到核心的ViewRootImpl
-    - -> ViewRootImpl.setView           最后会调用setView将view设置出来
+    - -> WindowManagerGlobal.addView    在这个方法中会找到核心的ViewRootImpl，这个Impl相当于是root根
+    - -> ViewRootImpl.setView           最后会调用setView将view设置出来，mWindowSession在创建ViewRootImpl对象时被实例化
     - -> WindowSession.addToDisplay(AIDL进行IPC)      
     - -> WindowManagerService.addWindow() 
     - -> ViewRootImpl.setView
+- 这里讲解一下AIDL交互的流程逻辑
+    - 主要分析是ViewRootImpl#setView()到WindowManagerService.addWindow()的这个过程，涉及到跨进程通信。
+    - 1.ViewRootImpl#setView()过程。mWindowSession是IWindowSession对象。在创建ViewRootImpl对象时被实例化。
+    - 2.WindowManagerGlobal#getWindowSession()过程。getWindowManagerService()通过AIDL返回WindowManagerService实例。之后调用WindowManagerService#openSession()。
+    - 3.WindowManagerService#openSession()过程。返回一个Session对象。也就是说在ViewRootImpl#setView()中调用的是mWindowSession.addToDisplay，其实就是Session#addToDisplay()。
+    - 4.Session#addToDisplay()过程。mService是个WindowManagerService对象，也就是说最后调用的是WindowManagerService#addWindow()
+    - 5.WindowManagerService#addWindow()过程。mWindowMap是个Map实例，将WindowManager添加进WindowManagerService统一管理。至此，整个添加视图操作解析完毕。
+- WindowManager.updateViewLayout()解析
+    - 和addView()过程一样，最终会进入到WindowManagerGlobal#updateViewLayout()。将传入的View设置参数之后，更新mRoot中View的参数。
+- WindowManager.removeView()解析
+    - 和上面过程一样，最终会进入到WindowManagerGlobal#removeView()。这个过程要稍微麻烦点，首先调用root.die()，接着将View添加进mDyingViews。
+    - ViewRootImpl#die()中，参数immediate默认为false,也就是说这里只是发送了一个what=MSG_DIE的空消息。ViewRootHandler收到这条消息会执行doDie()。
+    - 经过一圈效验最终还是回到WindowManagerGlobal中移除View
+
+
 
 
 #### 3.6 拖拽回弹吸附
@@ -213,11 +242,12 @@
 - 需要注意的是，在隐藏悬浮窗的时候，最好是移除一下，下次需要显示的时候再添加。
 
 
+
 #### 4.6 悬浮窗拖拽实现
 - 如何实现悬浮窗可随手指拖动？
-    - 思路非常简单，监听悬浮窗那个onTouchListener即可，在刚点击的ACTION_DOWN事件中记录当前的x,y位置，然后在每次移动后获取到本次移动的位置，二者相减就是需要移动的位置，这是自定义view的最基本操作了。
+    - 思路非常简单，监听悬浮窗那个onTouchListener即可，在刚点击的ACTION_DOWN(手指按下)事件中记录当前的x,y位置，然后在每次移动(ACTION_MOVE事件)后获取到本次移动的位置，二者相减就是需要移动的位置，这是自定义view的最基本操作了。
 - 如何实现悬浮窗左右边的吸顶效果？
-    - 监听到手指抬起的动作后，判断当前位置是靠近左边还是右边，靠近左边就以位置动画的方式平移到左边，靠近右边就平移到右边。
+    - 监听到手指抬起(UP事件)的动作后，判断当前位置是靠近左边还是右边，靠近左边就以位置动画的方式平移到左边，靠近右边就平移到右边。
 
 
 
